Bug 328355 - @classmethod should create an alias for the class for the first parameter
Summary: @classmethod should create an alias for the class for the first parameter
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: Language support (other bugs)
Version First Reported In: git master
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-03 07:40 UTC by Sven Brauch
Modified: 2015-10-10 14:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Brauch 2013-12-03 07:40:10 UTC
Currently it creates an instance, so when you call it you get the wrong (i.e. usually none at all) type.

Reproducible: Always
Comment 1 Sven Brauch 2015-10-10 14:00:41 UTC
Git commit e33e2d557e568291f1231371ea177522d4f6b8cf by Sven Brauch.
Committed on 10/10/2015 at 14:00.
Pushed by brauch into branch 'master'.

correctly set type of first argument for @classmethod s

M  +16   -4    duchain/declarationbuilder.cpp
M  +7    -0    duchain/tests/pyduchaintest.cpp

http://commits.kde.org/kdev-python/e33e2d557e568291f1231371ea177522d4f6b8cf