correctly set type of first argument for @classmethod s

BUG:328355